# self-heal

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agents/skills/self-heal/: SKILL.md
.agents/skills/self-heal/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: self-heal-instincts.yaml
.claude/skills/self-heal/: SKILL.md
.codex/: AGENTS.md
.codex/agents/: docs-researcher.toml  explorer.toml  reviewer.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: RESULTS.md  run.py  run_local_sweep.py  tasks.py
benchmarks/quixbugs/: __init__.py  loader.py
control-plane/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
control-plane/app/: auth.py  config.py  db.py  email.py  main.py  models.py  policy_engine.py  projects.py  schemas.py  security.py
control-plane/app/routes/: auth.py  ingest.py  metrics.py  policy.py  runs.py
control-plane/migrations/: env.py
control-plane/migrations/versions/: 29771e89c4bc_initial_schema.py
control-plane/scripts/: seed_demo.py  seed_run_for.py  smoke_auth.py  smoke_ingest.py
control-plane/tests/: test_policy_engine.py
demo/: mymod.py  test_mymod.py
docs/: README.md  custom-proposer.md  faq.md  sandbox-threat-model.md
examples/: async_repair.py  basic.py  extract_price.py  streaming_progress.py  test_driven_repair.py  verified_repair.py  with_claude_agent_sdk.py  with_crewai.py  with_langchain.py  with_openai_agents.py
scripts/: build_outreach_sheet.py  make_demo_gif.py
site/: .env.example  .gitignore  README.md  package-lock.json  package.json  proxy.ts
site/app/: globals.css  layout.tsx  page.tsx
site/app/api/auth/logout/: route.ts
site/app/api/auth/me/: route.ts
site/app/api/auth/request-link/: route.ts
site/app/api/auth/verify/: route.ts
site/app/api/cp/keys/: route.ts
site/app/api/cp/keys/[id]/: route.ts
site/app/api/cp/policy/: route.ts
site/app/api/cp/policy/[id]/: route.ts
site/app/api/waitlist/: route.ts
site/app/auth/verify/: route.ts
site/app/dashboard/: layout.tsx  page.tsx
site/app/dashboard/keys/: page.tsx
site/app/dashboard/login/: page.tsx
site/app/dashboard/login/sent/: page.tsx
site/app/dashboard/metrics/: page.tsx
site/app/dashboard/policy/: page.tsx
site/app/dashboard/runs/: page.tsx
site/app/dashboard/runs/[id]/: page.tsx
site/components/: CodeSample.tsx  WaitlistForm.tsx
site/components/dashboard/: MetricsCharts.tsx  PolicyRuleForm.tsx  PolicyRulesList.tsx  RangeSwitch.tsx  RunStatusPill.tsx  SignOutButton.tsx
site/db/: 001_waitlist.sql  run-migration.mjs
site/lib/: control-plane.ts  cp-fetch.ts
src/self_heal/: __init__.py  _patch.py  cache.py  cli.py  control_plane.py  core.py  diagnose.py  events.py  llm.py  loop.py  propose.py  pytest_plugin.py  retry.py  safety.py  sandbox.py  types.py  verify.py
src/self_heal/integrations/: __init__.py  claude_agent_sdk.py  langgraph.py  openai_agents.py
src/self_heal/llm/: __init__.py  _claude.py  _cohere.py  _fireworks.py  _gemini.py  _groq.py  _litellm.py  _mistral.py  _openai.py  _together.py
tests/: test_async_and_streaming.py  test_control_plane.py  test_core.py  test_examples_import.py  test_integrations_claude_agent_sdk.py  test_integrations_langgraph.py  test_patch.py  test_proposers.py  test_quixbugs_loader.py  test_retry.py  test_sandbox.py  test_v01_features.py  test_v02_features.py
