[project]
name = "self-heal-llm"
version = "0.4.2"
description = "Automatic repair for failing Python code, powered by any LLM."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Johin Johny", email = "johinjohny144@gmail.com" },
]
keywords = [
    "llm",
    "repair",
    "agent",
    "ai",
    "code-repair",
    "claude",
    "openai",
    "gemini",
    "litellm",
    "self-healing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
openai = ["openai>=1.40.0"]
gemini = ["google-genai>=0.3.0"]
litellm = ["litellm>=1.0.0"]
all = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "google-genai>=0.3.0",
    "litellm>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "google-genai>=0.3.0",
    "litellm>=1.0.0",
    # integration packages (tested in CI; optional for end users)
    "claude-agent-sdk>=0.1.0",
    "langchain-core>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/Johin2/self-heal"
Repository = "https://github.com/Johin2/self-heal"
Issues = "https://github.com/Johin2/self-heal/issues"

[project.scripts]
self-heal = "self_heal.cli:main"

[project.entry-points.pytest11]
self_heal = "self_heal.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/self_heal"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
